temop fix to see contrast

--- a/views/css2/styles.css
+++ b/views/css2/styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: gray !important;
+}
+
 object {
     pointer-events: none;
 }
